2004-01-13  Bharat Mediratta  <bharat@menalto.com> 1.4.2-cvs-b73

	* Committed new version of ImageTools.jar; same as the old one but
	  compiled under jdk1.1 for broader compatibility (specifically it now
	  works with the MS Java VM that comes with Windows XP)

2004-01-12  Bharat Mediratta  <bharat@menalto.com> 1.4.2-cvs-b72

	* Fixed minor vulnerability where a hacker could specify an alternate
	  name when Gallery is configured to use logged in users names.

2004-01-07  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.2-cvs-b71

	* Fixed creating root albums under certain conditions, where the
	  protocol would return an error message.

2004-01-05  Chris Schwerdt    <muti@afterglo.ws> 1.4.2-cvs-b70

	* Disable output buffering in gallery remote if debug mode is
	  enabled.

2004-01-06 Jens Tkotz <jens@peino.de> 1.4.2-cvs-b69

	* Substitute shell_exec with exec in configwizard.

	* Added some quotes.

	* Little Commenting.

2004-01-05  Chris Schwerdt    <muti@afterglo.ws> 1.4.2-cvs-b68
	* Added ability for gallery remote to fetch images remotely
	  into an album.

	* Enabled output buffering in gallery remote so that error and
	  status messages get removed before outputing command results.

2004-01-05  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.2-cvs-b67

	* Fixed security weakness in login code that could allow snooping for
	  usernames.

2004-01-02  Bharat Mediratta  <bharat@menalto.com> 1.4.2-cvs-b66

	* Fixed a warning in edit_thumb.php

2003-12-19 Andrew Lindeman  <joyoflinux@yahoo.com> 1.4.2-cvs-b65

	* Fixed a parse error I caused earlier in config_data.inc

2003-12-19 Andrew Lindeman  <joyoflinux@yahoo.com> 1.4.2-cvs-b64

	* Removed context help framework for right now.  I will rethink this
	  and add support in a larger chunk, probably in 1.4.3.
	  
	* Added a check in view_photo_properties.php to prevent unauthorized
	  users from viewing images through that file.

2003-12-17  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.2-cvs-b63
