@@ -1,3 +1,9 @@
+2004-01-13  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.2-cvs-b74
+
+	* Fixed move-album so it checks that the source and destination
+	  galleries exist. This would lead to a grave corruption of the
+	  album DB.
+
 2004-01-13  Bharat Mediratta  <bharat@menalto.com> 1.4.2-cvs-b73
 
 	* Committed new version of ImageTools.jar; same as the old one but
